# nascar-pit-stop-analyzer

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: pit_stops.json
src/nascar_pit_stop_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pitstop_analyzer/: __init__.py  analysis.py  charts.py  cli.py  fetch.py
tests/: test_analysis.py
