[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nascar-pit-stop-analyzer"
version = "1.0.0"
description = "CLI analytics project for NASCAR pit-stop timing and position-change data"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2,<3.0",
  "matplotlib>=3.9,<4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9.0"]

[project.scripts]
pitstop-analyzer = "pitstop_analyzer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
